added backface-visibillity to hidden

--- a/awesomebuttons.css
+++ b/awesomebuttons.css
@@ -25,6 +25,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .btn:active {
